utp/compII/toscal/tests/semantic/fail/first.pas
(* just a sample test to ensure the fail/ directory is being properly
   handled *)
program Pragrama;
begin
	reference_an_unsigned_procedure;
end
